RESOLVED FIXED132225
WebKit2 View Gestures (Zoom): Pages with 'background-attachment: fixed' don't behave correctly when zoomed
https://bugs.webkit.org/show_bug.cgi?id=132225
Summary WebKit2 View Gestures (Zoom): Pages with 'background-attachment: fixed' don't...
Tim Horton
Reported 2014-04-26 23:57:49 PDT
The RenderView's main GraphicsLayer doesn't apply the page scale if we have composited background-attachment: fixed; its contents containment layer does. We should apply the pinch-zoom scale to that layer if it exists (it only exists in this case). <rdar://problem/15729975>
Attachments
patch (10.24 KB, patch)
2014-04-27 00:01 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2014-04-27 00:01:11 PDT
Tim Horton
Comment 2 2014-04-27 13:43:40 PDT
Note You need to log in before you can comment on or make changes to this bug.