Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h
@@ -41,6 +41,7 @@ OBJC_CLASS CALayer;
 
 namespace WebCore {
 class FrameView;
+class PlatformCALayer;
 class TiledBacking;
 }
 
@@ -94,6 +95,8 @@ private:
     virtual void adjustTransientZoom(double scale, WebCore::FloatPoint origin) override;
     virtual void commitTransientZoom(double scale, WebCore::FloatPoint origin) override;
     void applyTransientZoomToPage(double scale, WebCore::FloatPoint origin);
+    WebCore::PlatformCALayer* layerForTransientZoom() const;
+    WebCore::PlatformCALayer* shadowLayerForTransientZoom() const;
 
     virtual WebCore::TransformationMatrix rootLayerTransform() const override {  return m_transform; }
     virtual void setRootLayerTransform(const WebCore::TransformationMatrix&) override;
